Fix various deprecations (#1595)
Signed-off-by: Wouter Born <github@maindrain.net>